<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGreen"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@color/SeaGreen"
        android:text="@string/vet_visit" />

    <EditText
        android:id="@+id/nameIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/fname_lname" />

    <ListView
        android:id="@+id/speciesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age" />

        <TextView
            android:id="@+id/ageOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0" />

        <SeekBar
            android:id="@+id/ageBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="20"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/PurposeIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/purpose"
        android:inputType="text" />

    <EditText
        android:id="@+id/timeIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:text="@string/time" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ProcessData"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/dataOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>